--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -174,26 +173,8 @@ body {
   max-width: 500px;
 }
 
-@media (max-width: 900px) {
-  .f_container {
-    flex-direction: column;
-    text-align: center;
-  }
-  
-  .stats {
-    justify-content: center;
-  }
-  
-  .f_title {
-    font-size: 42px;
-  }
-}
 
 
-
-
-
-/* Press Section Styles */
 .press {
   padding: 60px 40px;
   background-color: #fff;
@@ -387,7 +368,7 @@ body {
   .process_basic > .step_img:first-of-type {
     order: 1;
   }
-  
+
   .step_num {
     font-size: 72px;
   }
@@ -645,12 +626,6 @@ body {
 
 
 
-
-
-
-
-
-
 .testi {
   display: flex;
   background-color: var(--bright_background);
@@ -679,8 +654,6 @@ body {
 .testi_title {
 
   font-size: 36px; 
-  width: 700px; 
-  margin-bottom: 60px; 
 }
 
 
@@ -760,7 +733,17 @@ body {
 
 
 
+@media (max-width:1440px) {
+  .gallery {
+    margin-top: 200px;
+    width:30%;
+    height: 30%;
+  }
+  .testi_title {
+    font-size: 44px;
 
+  }
+}
 
 
 .price {
@@ -1237,7 +1220,7 @@ body {
   }
   
   .f_nav {
-    flex: 1 1 calc(33.333% - 32px);
+    flex: 1 1 calc(33% - 32px);
     min-width: 140px;
   }
 }
